introspect/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: IngressClass
metadata:
  name: istio
spec:
  controller: istio.io/ingress-controller
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: introspect
  annotations:
    ingress.kubernetes.io/ssl-redirect: "true"
    ingress.kubernetes.io/use-port-in-redirects: "true"
spec:
  ingressClassName: istio
  tls:
  - hosts:
    - introspect.vasu-test.otc.actvirtual.com
    secretName: wildcard-tls
  rules:
  - host: introspect.vasu-test.otc.actvirtual.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          serviceName: introspect
          servicePort: 9090
