introspect/istio.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: introspect-vs
spec:
  hosts:
  - "introspect.vasu-test.otc.actvirtual.com"
  gateways:
  - istio-system/garden-gw
  http:
  - match:
    - uri:
        regex: /.*
    route:
    - destination:
        port:
          number: 9090
        host: introspect
